--- a/FitPortal/FitPortal/Views/Shared/_AdminLayout.cshtml
+++ b/FitPortal/FitPortal/Views/Shared/_AdminLayout.cshtml
@@ -113,13 +113,16 @@
                   <li><a><i class="fa fa-table"></i> Chuyên ngành <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a asp-area="Admin" asp-controller="Specialization" asp-action="ViewAll">Danh sách</a></li>
-                      <li><a href="tables_dynamic.html">Table Dynamic</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-table"></i> Lớp học <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a asp-area="Admin" asp-controller="Class" asp-action="ViewAll">Danh sách</a></li>
-                      <li><a href="tables_dynamic.html">Table Dynamic</a></li>
+                    </ul>
+                  </li>
+                  <li><a><i class="fa fa-table"></i> Môn học <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                      <li><a asp-area="Admin" asp-controller="Subject" asp-action="ViewAll">Danh sách</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-bar-chart-o"></i> Lịch công tác <span class="fa fa-chevron-down"></span></a>
