--- a/FitPortal/FitPortal/Areas/Admin/Views/Role/AddRole.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Role/AddRole.cshtml
@@ -1,6 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @using FitPortal
 @using FitPortal.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
@@ -9,7 +7,7 @@
 @{
     Layout = null;
 }
-<form asp-area="Admin" asp-controller="Role" asp-action="AddRole" onsubmit="jQueryAjaxPost(this)" class="form-horizontal form-label-left" method="post">
+<form asp-area="Admin" asp-controller="Role" asp-action="AddRole" onsubmit="return jQueryAjaxPost(this);" class="form-horizontal form-label-left" method="post" autocomplete="off">
 
     <div class="form-group">
     <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">Tên vai trò<span class="required" asp-validation-for="RoleName">*</span>
