--- a/FitPortal/FitPortal/Areas/Admin/Views/Subject/AddSubject.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Subject/AddSubject.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@using FitPortal
+﻿@using FitPortal
 @using FitPortal.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -9,11 +6,7 @@
 @{
     Layout = null;
 }
-<form onsubmit="jQueryAjaxPost(this)" asp-area="Admin" asp-controller="Subject" asp-action="AddSubject" class="form-horizontal form-label-left" method="post" autocomplete="off">
-    @if(TempData["msg"]!=null)
-    {
-        <div class="text-danger">@TempData["msg"]</div>
-    }
+<form asp-area="Admin" asp-controller="Subject" asp-action="AddSubject" onsubmit="return jQueryAjaxPost(this);" class="form-horizontal form-label-left" method="post">
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
     <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">Mã môn học:</label>
