--- a/FitPortal/FitPortal/Areas/Admin/Views/Subject/ViewAll.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Subject/ViewAll.cshtml
@@ -10,18 +10,20 @@
     Layout = "/Views/Shared/_AdminLayout.cshtml";
 }
 <!--Popup start-->
-<div class="modal" tabindex="-1" id="form-modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
-      </div>
-      <div class="modal-body">
-      </div>
-      <div class="modal-footer">
-      </div>
+<div class="modal" tabindex="-1" role="dialog" id="form-modal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 <!--Popup end-->
 <h2>Quản lý môn học</h2>
