--- a/FitPortal/FitPortal/Views/Shared/_Layout.cshtml
+++ b/FitPortal/FitPortal/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using FitPortal.Models.Domain
+@using FitPortal.Models.Domain
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @{
-    var user = UserManager.FindByNameAsync(User.Identity.Name);
+    List<PostCategory> categories = (List<PostCategory>)ViewData["Category"];
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -13,9 +14,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fit-UEF-Event</title>
+    <title>@ViewData["Title"]</title>
     <!-- favicon -->
-    <link rel="icon" href="/img/favicon.png" sizes="20x20" type="image/png">
+    <link rel="icon" href="/img/ueflogo.png" sizes="20x20" type="image/png">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/vendor.css">
@@ -82,17 +83,18 @@
             <div class="row">
                 <div class="col-md-4 align-self-center">
                     <div class="logo text-md-left text-center">
-                        <a class="main-logo" href="index.html.htm"><img src="/img/logo.png" alt="img"></a>
+                        <a class="main-logo" href="~/"><img height="120" src="/img/mainlogo.png" alt="img"></a>
                     </div>
                 </div>
                 <div class="col-md-8 text-md-right text-center">
                         @if(SignInManager.IsSignedIn(User))
                         {
-                            <label>Xin chào @user.Result.Name</label>
-                            <a href="/userauthentication/logout" class="btn btn-main">Đăng xuất</a>
+                            var user =await UserManager.FindByNameAsync(User.Identity.Name);
+                            <label>Xin chào @user.Name</label>
+                            <a href="/userauthentication/logout" class="btn">Đăng xuất</a>
                         }else
                         {
-                            <a href="/userauthentication/login" class="btn btn-main">
+                            <a href="/userauthentication/login" class="btn">
                                 Đăng nhập
                             </a>
                         }
@@ -122,16 +124,39 @@
                 <div class="collapse navbar-collapse" id="miralax_main_menu">
                     <ul class="navbar-nav menu-open">
                         <li class="menu-item-has-children current-menu-item">
-                            <a href="#">Home</a>
+                            <a href="~/">Trang chủ</a>
                         </li>
-                        <li><a href="blog-category.html.htm">Category</a></li>
                         <li class="menu-item-has-children current-menu-item">
-                            <a href="#">Pages</a>
+                            <a href="~/">Bài viết</a>
                             <ul class="sub-menu">
-                                <li><a href="blog-category.html.htm">Blog Category</a></li>
-                                <li><a href="contact.html.htm">Contact</a></li>
-                            </ul>
-                        </li>
+                                @{
+                                    foreach(var category in categories)
+                                    {
+                                            <li><a href="/ViewPost/Category?IDCategory=@(category.Id)">@(category.CategoryName)</a></li>
+                                        }
+                                    }
+                                </ul>
+                            </li>
+                            @{
+                                if (SignInManager.IsSignedIn(User))
+                                {
+                                    var user =await UserManager.FindByNameAsync(User.Identity.Name);
+                                    var role =await UserManager.GetRolesAsync(user);
+                                    foreach (var item in role)
+                                    {
+                                        if (string.Compare(item, "Student")==0)
+                                        {
+                                            <li class="menu-item-has-children current-menu-item">
+                                                <a href="#">Tra cứu</a>
+                                                <ul class="sub-menu">
+                                                    <li><a href="blog.html.htm">Thông tin giảng viên</a></li>
+                                                </ul>
+                                            </li>
+                                        }
+                                    }
+                                }
+                                
+                            }
                         <li class="menu-item-has-children current-menu-item">
                             <a href="#">Blog</a>
                             <ul class="sub-menu">
@@ -146,7 +171,6 @@
                     </ul>
                 </div>
                 <div class="nav-right-part nav-right-part-desktop">
-                    <a class="cart-header" href="#"><img src="/img/icon/cart.png" alt="img"><span>5</span></a>
                     <a class="search header-search" href="#"><i class="fa fa-search"></i></a>
                 </div>
             </div>
