--- a/FitPortal/FitPortal/Views/ViewPost/View.cshtml
+++ b/FitPortal/FitPortal/Views/ViewPost/View.cshtml
@@ -3,14 +3,13 @@
 *@
 @model FitPortal.Models.Domain.PostInfor
 @{
-    
+    ViewData["Category"] = ViewBag.Category; 
 }
 
-<h1 class="section-title" style="margin-top: 50px">
-    <strong class="post_tt">@Model.PostName</strong>
-</h1>
-
 <div class="container">
+    <h2 class="section-title" style="margin-top: 50px">
+    <strong class="post_tt">@Model.PostName</strong>
+    </h2>
     <div class="item">
         @Html.Raw(Model.Content)
     </div>
