Fix Admin Home Layout

--- a/FitPortal/FitPortal/Views/Shared/_Layout.cshtml
+++ b/FitPortal/FitPortal/Views/Shared/_Layout.cshtml
@@ -149,7 +149,8 @@
                                             <li class="menu-item-has-children current-menu-item">
                                                 <a href="#">Tra cứu</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="blog.html.htm">Thông tin giảng viên</a></li>
+                                                    <li><a href="/home/searchteacher">Thông tin giảng viên</a></li>
+                                                    <li><a href="/home/searchteacher">Thông tin cá nhân</a></li>
                                                 </ul>
                                             </li>
                                         }
