--- a/FitPortal/FitPortal/Areas/Admin/Views/Subject/ViewAll.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Subject/ViewAll.cshtml
@@ -35,10 +35,11 @@
         <table id="datatable" class="table table-striped table-bordered">
             <thead>
             <tr>
-                <th>Mã môn học</th>
+                <th wwidth="55%">Mã môn học</th>
                 <th>Tên môn học</th>
                 <th>Chuyên ngành</th>
-                <th><a onclick="showInPopup('@Url.Action("AddSubject","Subject",Context.Request.Scheme)','Thêm mới môn học')" class="btn btn-round btn-info">Thêm mới môn học</a></th>
+                <th>Đề cương</th>
+                <th><a onclick="showInPopup('@Url.Action("AddSubject","Subject",Context.Request.Scheme)','Thêm mới môn học')" class="btn btn-round btn-info">Thêm mới</a></th>
             </tr>
             </thead>
             <tbody>
@@ -51,6 +52,7 @@
                                 <td>@item.SubjectCode</td>
                                 <td>@item.SubjectName</td>
                                 <td>@item.SpecializationName</td>
+                                <td><a href="/admin/outline/viewall?IDSubject=@item.SubjectId" class="btn btn-round btn-primary"><i class="fa fa-th-list"></a></td>
                                 <td>
                                     Xóa sửa
                                 </td>
