add edit delete subject
Sửa xóa môn học

--- a/FitPortal/FitPortal/Areas/Admin/Views/Outline/ViewAll.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Outline/ViewAll.cshtml
@@ -37,6 +37,7 @@
                                 <td>@item.File</td>
                                 <td>
                                     <a href="/admin/outline/editoutline?IDOutline=@item.Id" class="btn btn-round btn-info"><i class="fa fa-edit"></i></a>
+                                    <a href="/admin/outline/deleteoutline?IDOutline=@item.Id" class="btn btn-round btn-danger"><i class="fa fa-circle-o-notch"></i></a>
                                 </td>
                             </tr>
                         }
