--- a/FitPortal/FitPortal/Views/Shared/_AdminLayout.cshtml
+++ b/FitPortal/FitPortal/Views/Shared/_AdminLayout.cshtml
@@ -112,7 +112,7 @@
                   <li><a><i class="fa fa-clone"></i>Sinh viên <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a asp-area="Admin" asp-controller="Student" asp-action="ViewAll">Danh sách</a></li>
-                      <li><a asp-area="Admin" asp-controller="Student" asp-action="Graduating">Đã tốt nghiệp</a></li>
+                      <li><a asp-area="Admin" asp-controller="Research" asp-action="Student">NCKH</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-table"></i> Chuyên ngành <span class="fa fa-chevron-down"></span></a>
