--- a/FitPortal/FitPortal/Views/Shared/_Layout.cshtml
+++ b/FitPortal/FitPortal/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-md-4 align-self-center">
                     <div class="logo text-md-left text-center">
-                        <a class="main-logo" href="~/"><img height="120" src="/img/mainlogo.png" alt="img"></a>
+                        <a class="main-logo" href="/home/index"><img height="120" src="/img/mainlogo.png" alt="img"></a>
                     </div>
                 </div>
                 <div class="col-md-8 text-md-right text-center">
@@ -150,7 +150,7 @@
                                                 <a href="#">Tra cứu</a>
                                                 <ul class="sub-menu">
                                                     <li><a href="/home/searchteacher">Thông tin giảng viên</a></li>
-                                                    <li><a href="/home/searchteacher">Thông tin cá nhân</a></li>
+                                                    <li><a href="/home/userprofile">Thông tin cá nhân</a></li>
                                                 </ul>
                                             </li>
                                         }
@@ -158,16 +158,6 @@
                                 }
                                 
                             }
-                        <li class="menu-item-has-children current-menu-item">
-                            <a href="#">Blog</a>
-                            <ul class="sub-menu">
-                                <li><a href="blog.html.htm">Blog</a></li>
-                                <li><a href="blog-category.html.htm">Blog Category</a></li>
-                                <li><a href="blog-gallery.html.htm">Blog Gallery</a></li>
-                                <li><a href="blog-list.html.htm">Blog List</a></li>
-                                <li><a href="blog-details.html.htm">Blog Details</a></li>
-                            </ul>
-                        </li>
                         <li><a href="contact.html.htm">Contact</a></li>
                     </ul>
                 </div>
