--- a/FitPortal/FitPortal/Areas/Admin/Views/Teacher/ViewAll.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Teacher/ViewAll.cshtml
@@ -42,7 +42,7 @@
                         <td>@item.DayOfBirth</td>
                         <td>@item.Gender</td>
                         <td>@item.Address</td>
-                        <td>@(item.IsDeleted ? "Hoạt động" : "Dừng")</td>
+                        <td>@(item.IsDeleted ? "Dừng" : "Hoạt động")</td>
                         <td>
                                 <a  class="btn btn-round btn-info" href="/admin/teacher/editteacher?IDTeacher=@item.Id"><i class="fa fa-edit"></a>
                                 <span>|</span>
