--- a/FitPortal/FitPortal/Areas/Admin/Views/Post/AddCategory.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Post/AddCategory.cshtml
@@ -15,20 +15,15 @@
     </label>
     <div class="col-md-6 col-sm-6 col-xs-12">
         <input type="text" asp-for="CategoryName"class="form-control col-md-7 col-xs-12">
+        @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
     </div>
     </div>
-    @if (TempData["msg"] != null)
-        {
-<div class="form-group">
-    <span class="text-info">@TempData["msg"]</span>
-</div>
-        }
     <div class="ln_solid"></div>
     <div class="form-group">
     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
         <button type="submit" class="btn btn-info">Thêm mới</button>
-        <a type="button" asp-area="Admin" asp-controller="Post" asp-action="ManageCategory">
-        <button type="button" class="btn btn-info">Trở về</button>
+        <a type="button" asp-area="Admin" asp-controller="Post" asp-action="ManageCategory" class="btn btn-info">
+        Trở về
         </a>
     </div>
     </div>
