--- a/FitPortal/FitPortal/Areas/Admin/Views/Post/ManagePost.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Post/ManagePost.cshtml
@@ -17,37 +17,38 @@
 <h1>Quản lý bài viết</h1>
 <button type="button" class="btn btn-info">
 <a type="button" asp-area="Admin" asp-controller="Post" asp-action="AddPost">Thêm mới</a></button>
-                    <div class="x_content">
-                    <table id="datatable" class="table table-striped table-bordered">
-                      <thead>
-                        <tr>
-                          <th>Tên bản tin</th>
-                          <th>Thể loại</th>
-                          <th>Ngày tạo</th>
-                          <th>Người tạo</th>
-                          <th>Hiển thị</th>
-                          <th>#</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                            @{
-                                foreach(var item in list)
-                                {
-                                    <tr>
-                                        <td>@item.PostName</td>
-                                        <td>@item.CategoryName</td>
-                                        <td>@item.DateCreated</td>
-                                        <td>@item.UserCreate</td>
-                                        <td>
-                                            <input data-id="@item.Id" type="checkbox" class="js-switch" @Html.Raw(@item.IsDisplay == true ? "checked":"")/>
-                                        </td>
-                                        <td>
-                                            <a class="btn btn-round btn-info" href="/Admin/Post/DeletePost/@item.Id">Xóa</a>
-                                        </td>
-                                    </tr>
-                                }
-                            }
+    <div class="x_content">
+    <table id="datatable" class="table table-striped table-bordered">
+        <thead>
+        <tr>
+            <th>Tên bản tin</th>
+            <th>Thể loại</th>
+            <th>Ngày tạo</th>
+            <th>Người tạo</th>
+            <th>Hiển thị</th>
+            <th>#</th>
+        </tr>
+        </thead>
+        <tbody>
+            @{
+                foreach(var item in list)
+                {
+                    <tr>
+                        <td>@item.PostName</td>
+                        <td>@item.CategoryName</td>
+                        <td>@item.DateCreated</td>
+                        <td>@item.UserCreate</td>
+                        <td>
+                            <input data-id="@item.Id" type="checkbox" class="js-switch" @Html.Raw(@item.IsDisplay == true ? "checked":"")/>
+                        </td>
+                        <td>
+                            <a href="/Admin/Post/EditPost?IDPost=@item.Id" class="btn btn-round btn-info"><i class="fa fa-edit"></i></a>
+                            <a href="/Admin/Post/DeletePost/@item.Id" class="btn btn-round btn-danger"><i class="fa fa-circle-o-notch"></i></a>
+                        </td>
+                    </tr>
+                }
+            }
                         
-                      </tbody>
-                    </table>
-                  </div>
+        </tbody>
+    </table>
+    </div>
