--- a/FitPortal/FitPortal/Views/Shared/_Layout.cshtml
+++ b/FitPortal/FitPortal/Views/Shared/_Layout.cshtml
@@ -37,9 +37,9 @@
     </div>
     <!-- search popup area start -->
     <div class="search-popup" id="search-popup">
-        <form action="index.html" class="search-form">
+        <form action="search" class="search-form">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search.....">
+                <input name="ps" id="ps" type="text" class="form-control" placeholder="Search.....">
             </div>
             <button type="submit" class="submit-btn"><i class="fa fa-search"></i></button>
         </form>
