Add view working schedule

--- a/FitPortal/FitPortal/Views/Shared/_Layout.cshtml
+++ b/FitPortal/FitPortal/Views/Shared/_Layout.cshtml
@@ -165,6 +165,16 @@
                                             }
                                             check += 1;
                                         }
+                                        if (string.Compare(item, "Teacher")==0)
+                                        {
+                                            <li class="menu-item-has-children current-menu-item">
+                                                <a href="#">Tra cứu</a>
+                                                <ul class="sub-menu">
+                                                    <li><a href="/home/searchteacher">Thông tin giảng viên</a></li>
+                                                    <li><a href="/home/userprofile">Thông tin cá nhân</a></li>
+                                                </ul>
+                                            </li>
+                                        }
                                     }
                                 }
                                 
