--- a/FitPortal/FitPortal/Views/Home/UserProfile.cshtml
+++ b/FitPortal/FitPortal/Views/Home/UserProfile.cshtml
@@ -1,8 +1,10 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@using FitPortal.Areas.Admin.Models
 @model FitPortal.Models.UserProfileViewModel
 @{
+    List<WorkingScheduleViewModel> wmodel = (List<WorkingScheduleViewModel>)ViewBag.Work;
 }
 <div class="container">
     <div class="panel panel-midnightblue">
@@ -16,7 +18,7 @@
                         </tr>
                         <tr>
                             <td>Ngày sinh:</td>
-                            <td>@Model.DayOfBirth</td>
+                            <td>@Model.DayOfBirth.ToShortDateString()</td>
                         </tr>
                         <tr>
                             <td>Mã số sinh viên:</td>
@@ -32,6 +34,37 @@
                         </tr>
                     </tbody>
                 </table>
+                
+                @if(wmodel != null)
+                {
+                        <h3>Lịch công tác:</h3>
+                        <table class="table table-condensed">
+                        <thead>
+                        <tr>
+                            <th>Tên công việc</th>
+                            <th>Ngày bắt đầu</th>
+                            <th>Ngày kết thúc</th>
+                            <th>Địa điểm</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                            @{
+                                
+                                foreach(var item in wmodel)
+                                {
+                                        <tr>
+                                            <td>@item.WorkName</td>
+                                            <td>@item.StartDate.ToShortDateString()</td>
+                                            <td>@item.EndDate.ToShortDateString()</td>
+                                            <td>@item.Address</td>
+                                        </tr>
+                                }
+                    
+                            }
+                            </tbody>
+                        </table>
+                }
+                
             }
         }
     </div>
