Fix Dublicate and add edit work

--- a/FitPortal/FitPortal/Areas/Admin/Views/Specialization/AddSpecialization.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Specialization/AddSpecialization.cshtml
@@ -46,7 +46,7 @@
     </div>
     </div>
     <div class="form-group">
-    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">Thể loại<span class="required" >*</span>
+    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">Trưởng ngành<span class="required" >*</span>
     </label>
     <div class="col-md-6 col-sm-6 col-xs-12">
         @Html.DropDownListFor(m => m.ManagerID, (IEnumerable<SelectListItem>) ViewBag.Teacher, new { @class = "col-md-6 col-sm-6 col-xs-12" })
