--- a/FitPortal/FitPortal/Areas/Admin/Views/Teacher/ViewAll.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Teacher/ViewAll.cshtml
@@ -44,9 +44,9 @@
                         <td>@item.Address</td>
                         <td>@(item.IsDeleted ? "Dừng" : "Hoạt động")</td>
                         <td>
-                                <a  class="btn btn-round btn-info" href="/admin/teacher/editteacher?IDTeacher=@item.Id"><i class="fa fa-edit"></a>
+                                <a  class="btn btn-round btn-info" href="/admin/teacher/editteacher?IDTeacher=@item.Id"><i class="fa fa-edit"></i></a>
                                 <span>|</span>
-                                <a  class="btn btn-round btn-danger" href="/admin/teacher/deleteteacher?IDTeacher=@item.Id"><i class="fa fa-circle-o-notch"></a>
+                                <a  class="btn btn-round btn-danger" href="/admin/teacher/deleteteacher?IDTeacher=@item.Id"><i class="fa fa-circle-o-notch"></i></a>
                         </td>
                         </tr>
                 }
