--- a/FitPortal/FitPortal/Areas/Admin/Views/Work/AddWork.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Work/AddWork.cshtml
@@ -65,7 +65,7 @@
     <div class="form-group">
     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
         <button type="submit" class="btn btn-info">Thêm mới</button>
-        <a type="button" class="btn btn-info" asp-area="Admin" asp-controller="Teacher" asp-action="ViewAll">Trở về
+        <a type="button" class="btn btn-info" asp-area="Admin" asp-controller="Work" asp-action="ViewAll">Trở về
         </a>
     </div>
     </div>   
