--- a/FitPortal/FitPortal/Areas/Admin/Views/Class/EditClass.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Class/EditClass.cshtml
@@ -52,7 +52,7 @@
     <div class="ln_solid"></div>
     <div class="form-group">
     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-        <button type="submit" class="btn btn-info">Thêm mới</button>
+        <button type="submit" class="btn btn-info">Sủa thông tin</button>
         <a type="button" asp-area="Admin" asp-controller="Class" asp-action="ViewAll" class="btn btn-info">Trở về</a>
     </div>
     </div>
