--- a/FitPortal/FitPortal/Areas/Admin/Views/Post/EditPost.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Post/EditPost.cshtml
@@ -19,7 +19,7 @@
     <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">Thể loại<span class="required" >*</span>
     </label>
     <div class="col-md-6 col-sm-6 col-xs-12">
-        @Html.DropDownListFor(m => m.CategoryID, (IEnumerable<SelectListItem>) ViewBag.CategoryList, new { @class = "col-md-6 col-sm-6 col-xs-12" })
+        @Html.DropDownListFor(m => m.CategoryID, (IEnumerable<SelectListItem>) ViewBag.CategoryList, new { @class = "form-control col-md-7 col-xs-12" })
     </div>
     </div>
     <div class="form-group">
