--- a/FitPortal/FitPortal/Areas/Admin/Views/Specialization/ViewAll.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Specialization/ViewAll.cshtml
@@ -9,7 +9,7 @@
 @{
     Layout = "/Views/Shared/_AdminLayout.cshtml";
 }
-<h1>Quản lý chuyên ngành</h1>
+<h3>Quản lý chuyên ngành</h3>
 <a asp-action="AddSpecialization" asp-controller="Specialization" asp-area="Admin" class="btn btn-info">Thêm mới</a>
     <div class="x_content">
     <table id="datatable" class="table table-striped table-bordered">
@@ -36,7 +36,7 @@
                             <td>
                                 <a  class="btn btn-round btn-info" href="/admin/specialization/editspecialization?IDSpecialization=@item.ID"><i class="fa fa-edit"></i></a>
                                 <span>|</span>
-                                <a  class="btn btn-round btn-danger" href="/admin/teacher/deleteteacher?IDTeacher=@item.ID"><i class="fa fa-circle-o-notch"></i></a>
+                                <a  class="btn btn-round btn-danger" href="/admin/specialization/deletespecialization?IDSpecialization=@item.ID"><i class="fa fa-circle-o-notch"></i></a>
                             </td>
                         </tr>
                     }
