--- a/FitPortal/FitPortal/Areas/Admin/Views/Student/SetClass.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Student/SetClass.cshtml
@@ -9,10 +9,21 @@
     int studentID = ViewBag.StudentId;
 }
 <form onsubmit="jQueryAjaxPost(this)" asp-area="Admin" asp-controller="Student" asp-action="SetClass" class="form-horizontal form-label-left" method="post">
+    <div class="form-group">
+    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">ID<span class="required">*</span>
+    </label>
     <div class="col-md-6 col-sm-6 col-xs-12">
-        <input asp-for="StudentID" value="@studentID" readonly/>
-        @Html.DropDownListFor(m => m.ClassID, (IEnumerable<SelectListItem>) ViewBag.Clases, new { @class = "col-md-6 col-sm-6 col-xs-12" })
+        <input asp-for="StudentID" value="@studentID" class="form-control col-md-7 col-xs-12" readonly/>
     </div>
+    </div>
+    <div class="form-group">
+    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">Mã user<span class="required">*</span>
+    </label>
+    <div class="col-md-6 col-sm-6 col-xs-12">
+        @Html.DropDownListFor(m => m.ClassID, (IEnumerable<SelectListItem>) ViewBag.Clases, new { @class = "form-control col-md-7 col-xs-12" })
+    </div>
+    </div>
+    
     <div class="ln_solid"></div>
     <div class="form-group">
     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
