--- a/FitPortal/FitPortal/Areas/Admin/Views/Subject/AddSubject.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Subject/AddSubject.cshtml
@@ -25,7 +25,7 @@
     <div class="form-group">
     <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">Chuyên ngành:</label>
     <div class="col-md-6 col-sm-6 col-xs-12">
-        @Html.DropDownListFor(m => m.MajorId, (IEnumerable<SelectListItem>) ViewBag.Specialization)
+        @Html.DropDownListFor(m => m.MajorId, (IEnumerable<SelectListItem>) ViewBag.Specialization, new{@class="form-control col-md-7 col-xs-12"})
         @Html.ValidationMessageFor(model => model.MajorId,"",new { @class = "text-danger" })
     </div>
     </div>
