--- a/FitPortal/FitPortal/Areas/Admin/Views/Teacher/EditTeacher.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Teacher/EditTeacher.cshtml
@@ -5,6 +5,7 @@
 @{
     Layout = "/Views/Shared/_AdminLayout.cshtml";
 }
+<h3>Sửa thông tin</h3>
 <form asp-area="Admin" asp-controller="Teacher" asp-action="EditTeacher" enctype="multipart/form-data" class="form-horizontal form-label-left" method="post">
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.ID)
