--- a/FitPortal/FitPortal/Areas/Admin/Views/Work/AddWork.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Work/AddWork.cshtml
@@ -5,6 +5,7 @@
 @{
     Layout = "/Views/Shared/_AdminLayout.cshtml";
 }
+<h3>Thêm mới công việc</h3>
 <form asp-area="Admin" asp-controller="Work" asp-action="AddWork" enctype="multipart/form-data" class="form-horizontal form-label-left" method="post">
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
