--- a/FitPortal/FitPortal/Areas/Admin/Views/Work/Assignment.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Work/Assignment.cshtml
@@ -10,10 +10,21 @@
     int IDWork = (int)ViewBag.IDWork;
 }
 <form asp-area="Admin" asp-controller="Work" asp-action="Assignment" onsubmit="jQueryAjaxPost(this)" class="form-horizontal form-label-left" method="post">
+    <div class="form-group">
+    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">Mã công việc<span class="required" >*</span>
+    </label>
     <div class="col-md-6 col-sm-6 col-xs-12">
-        <input asp-for="IdWork" value="@IDWork" readonly/>
-        @Html.DropDownListFor(m => m.IDTeacher, (IEnumerable<SelectListItem>) ViewBag.Teacher, new { @class = "col-md-6 col-sm-6 col-xs-12" })
+        <input asp-for="IdWork" value="@IDWork" class="form-control col-md-7 col-xs-12" readonly/>
     </div>
+    </div>
+    <div class="form-group">
+    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="">Tên giảng viên<span class="required" >*</span>
+    </label>
+    <div class="col-md-6 col-sm-6 col-xs-12">
+        @Html.DropDownListFor(m => m.IDTeacher, (IEnumerable<SelectListItem>) ViewBag.Teacher, new { @class = "form-control col-md-7 col-xs-12" })
+    </div>
+    </div>
+    
     <div class="ln_solid"></div>
     <div class="form-group">
     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
