--- a/FitPortal/FitPortal/Areas/Admin/Views/Work/EditWork.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Work/EditWork.cshtml
@@ -5,6 +5,7 @@
 @{
     Layout = "/Views/Shared/_AdminLayout.cshtml";
 }
+<h3>Chỉnh sửa công việc</h3>
 <form asp-area="Admin" asp-controller="Work" asp-action="EditWork" enctype="multipart/form-data" class="form-horizontal form-label-left" method="post">
     @Html.HiddenFor(model => model.Id)
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
