--- a/FitPortal/FitPortal/Areas/Admin/Views/Work/ViewAll.cshtml
+++ b/FitPortal/FitPortal/Areas/Admin/Views/Work/ViewAll.cshtml
@@ -9,7 +9,7 @@
 @{
     Layout = "/Views/Shared/_AdminLayout.cshtml";
 }
-<h1>Quản lý chuyên ngành</h1>
+<h3>Quản lý lịch công tác</h3>
     <div class="x_content">
     <table id="datatable" class="table table-striped table-bordered">
         <thead>
